fix(Navbar): increase z-index of header for improved visibility

--- a/apps/web/src/components/Navbar/style.module.css
+++ b/apps/web/src/components/Navbar/style.module.css
@@ -1,7 +1,7 @@
 .header {
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 50;
   height: 64px;
   background-color: light-dark(rgba(255, 255, 255, 0.8), rgba(26, 27, 30, 0.8));
   backdrop-filter: blur(20px);
